--- a/Views/InRecord/Index.cshtml
+++ b/Views/InRecord/Index.cshtml
@@ -11,14 +11,13 @@
     <!-- Latest compiled and minified Locales -->
     <script src="https://unpkg.com/bootstrap-table@1.15.3/dist/locale/bootstrap-table-zh-CN.min.js"></script>
     <script src="https://cdn.bootcss.com/moment.js/2.18.1/moment-with-locales.min.js" type="text/javascript"></script>
-    <link href="https://cdn.bootcss.com/bootstrap-datetimepicker/4.17.47/css/bootstrap-datetimepicker.min.css" rel="stylesheet" />
-    <script src="https://cdn.bootcss.com/bootstrap-datetimepicker/4.17.47/js/bootstrap-datetimepicker.min.js" type="text/javascript"></script>
-    <script src="https://cdn.bootcss.com/bootbox.js/5.4.0/bootbox.min.js" type="text/javascript"></script>
+
     <!-- 消息提示插件：toastr.js -->
-    <link href="https://cdnjs.cloudflare.com/ajax/libs/toastr.js/latest/toastr.min.css" rel="stylesheet" />
-    <script src="https://cdnjs.cloudflare.com/ajax/libs/toastr.js/latest/toastr.min.js" type="text/javascript"></script>
-    <script src="https://cdn.jsdelivr.net/npm/es6-promise@4/dist/es6-promise.min.js "></script>
-    <script src="https://cdn.jsdelivr.net/npm/es6-promise@4/dist/es6-promise.auto.min.js "></script>
+    <link href="~/Content/toastr/toastr.min.css" rel="stylesheet" />
+    <script src="~/Scripts/toastr.min.js" type="text/javascript"></script>
+    <!--es6 promise-->
+    <script src="~/Scripts//es6-promise.min.js "></script>
+    <script src="~/Scripts//es6-promise.auto.min.js "></script>
     <!-- 弹出框插件 -->
     <link href="https://cdnjs.cloudflare.com/ajax/libs/limonte-sweetalert2/8.11.8/sweetalert2.min.css" rel="stylesheet">
     <script src="https://cdnjs.cloudflare.com/ajax/libs/limonte-sweetalert2/8.11.8/sweetalert2.min.js"></script>
@@ -120,118 +119,26 @@
 
     <script type="text/javascript">
 
+         //添加g归还记录
         function addInRecord() {
             if (CheckFormNull("addform")) {
-                $.ajax({
-                    type: "POST",//方法类型
-                    url: "/InRecord/AddInRecord",//url
-                    data: $('#addform').serialize(),
-                    success: function (result) {
-                        if (result.success) {
-                            toastr.success('添加成功');
-                            $("#addInRecordModal").modal('hide');
-                            $("form")[0].reset(); //清除数据
-                            $("#inRecordTable").bootstrapTable('refresh');
-                        }
-                        else {
-                            toastr.warning(result.msg);
-                        }
-                    },
-                    error: function (e) {
-                        toastr.error('添加错误');
-                    }
-                });
+                AddRecord("addform", "/InRecord/AddInRecord", "addInRecordModal", "inRecordTable");
             }
         }
-
-        //获取要删除的code seqID date 并转jsonstr
-        function getJsonData() {
-            var rows = $("#inRecordTable").bootstrapTable('getSelections');
-            //存储数据
-            var ItemIDs = new Array();
-            //console.log(rows);
-            if (rows.length == 0) {// rows 主要是为了判断是否选中，下面的else内容才是主要
-                toastr.warning("请先选择要删除的记录!");
-                return;
-            } else {
-                //  声明一个object 存储行某几列数据
-                $(rows).each(function () {
-                    var item = new Object();
-                    item.ID = this.ID;
-                    ItemIDs.push(item);
-
-                });
-            }
-            return JSON.stringify(ItemIDs);
-        }
-
+                  
         //btn_remove 事件
         $("#btn_remove").on("click", function () {
             //获取选中数据
-            var jsonData = getJsonData();
-
-            //删除数据
-            confirmOrCancelDeleteData(jsonData);
-
-
+            var jsonData =  getSelectedData("inRecordTable");
+            if (jsonData == null) {
+                return;
+            }
+            //确认删除的话
+            if (confirmOrCancelDeleteData()) {
+                DeleteRecords("/InRecord/DeleteInRecords", "inRecordTable", jsonData);
+            }
         })
 
-        // 确认是否删除数据
-        function confirmOrCancelDeleteData(jsonData) {
-            swal.fire({
-                title: '确定删除吗？',
-                text: '你将无法恢复它！',
-                type: 'warning',
-                showCancelButton: true,
-                confirmButtonColor: '#3085d6',
-                cancelButtonColor: '#d33',
-                confirmButtonText: '确定删除！',
-                cancelButtonText: '取消删除！',
-                confirmButtonClass: 'btn btn-success ',
-                cancelButtonClass: 'btn btn-danger',
-                buttonsStyling: false
-            }).then(function (isConfirm) {
-                if (isConfirm.value === true) {
-                    swal.fire(
-                        '已删除！',
-                        '记录已被删除',
-                        'success'
-                    )
-                    //确认删除
-                    return true;
-                    deleteData(jsonData);
-
-                } else if (isConfirm.dismiss == 'cancel') {
-                    swal.fire(
-                        '已取消！',
-                        '记录未被删除',
-                        'error'
-                    );
-                    return false;
-                }
-            })
-        }
-
-        //删除数据
-        function deleteData(jsonData) {
-            $.ajax({
-                url: "/InRecord/DeleteInRecords",
-                type: "post",
-                data: { "ItemIDs": jsonData },
-                success: function (result) {
-                    if (result.success) {
-                        $("#inRecordTable").bootstrapTable('refresh');
-                        toastr.success('删除成功');
-                    }
-                    else {
-                        toastr.warning('删除失败');
-                    }
-                },
-                error: function (e) {
-                    toastr.error('删除错误');
-                }
-            });
-        }
         //操作列事情
         window.operationEvents = {
             //编辑事件
