--- a/Views/Login/Index.cshtml
+++ b/Views/Login/Index.cshtml
@@ -13,11 +13,12 @@
     <link rel="stylesheet" href="~/Content/bootstrap.min.css">
     <link href="~/Content/Login.css" type="text/css" rel="stylesheet">
     <link href="~/Content/style.css" rel="stylesheet" type="text/css" />
-    <link href="https://cdnjs.cloudflare.com/ajax/libs/toastr.js/latest/toastr.min.css" rel="stylesheet" />
+    <link href="~/Content/toastr/toastr.min.css" rel="stylesheet" />
+
     <script src="~/Scripts/jquery-3.3.1.min.js"></script>
-    <script src="https://cdnjs.cloudflare.com/ajax/libs/toastr.js/latest/toastr.min.js" type="text/javascript"></script>
-    <script src="https://cdn.jsdelivr.net/npm/es6-promise@4/dist/es6-promise.min.js "></script>
-    <script src="https://cdn.jsdelivr.net/npm/es6-promise@4/dist/es6-promise.auto.min.js "></script>
+    <script src="~/Scripts/toastr.min.js" type="text/javascript"></script>
+    <script src="~/Scripts/es6-promise.min.js "></script>
+    <script src="~/Scripts/es6-promise.auto.min.js "></script>
     <script src="~/Scripts/common.toastr.init.js"></script>
     
     <!-- form 空值验证 -->
